[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/laser_comprehensive-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Lazer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 108 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "lazer_charge"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "lazer_shoot"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[node name="Lazer" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 132 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 136 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 2 )
anims/lazer_charge = SubResource( 3 )
anims/lazer_shoot = SubResource( 4 )

[node name="LazerTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Lazer_body_entered"]
[connection signal="timeout" from="LazerTimer" to="." method="_on_LazerTimer_timeout"]
